# tinytapeout_gds_viewer

./: .gitignore  .gitmodules  README.md  index.html  package-lock.json  package.json  prettier.config.js  tinytapeout.gds.gltf  tinytapeout.html  vite.config.js
.github/workflows/: deploy.yml  static.yml
gds_processor/: CMakeLists.txt  README.md
gds_processor/src/: CMakeLists.txt  gds_processor.cpp
public/: tinytapeout.gds
src/: GDS_data.js  custom_parser.js  defines.js  gds_processor.js  gds_processor.wasm  gds_processor_worker.js  process_layers.js  viewer.js
